# ai-engineering-lab

./: .flake8  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md
.github/workflows/: README.md  lint.yml  pages-deploy.yml
docs/: FILE_ORGANIZATION.md  README.md
docs/github-actions/: FLAKE8_FIX.md  GUIDE.md  INDEX.md  SETUP_SUMMARY.md  test-flake8-config.sh
python_script/: plot_images.py
python_script/covid_analysis/: CSVHandler.py  DataAnalyser.py  __init__.py
week1-assignment/: README.md
week1-assignment/html/: data_storage_types.html
week1-assignment/python/: 01_fizzbuzz.py  02_password_retry.py  03_employee_name.py  04_atm_withdrawal.py  05_sales_data_summary.py  <2>: Password Retry.py  <3>: Employee Name.py  fizzbuzz.py
week2-assignment/python/: 07.py  09.py  HomeAssignment06.py  HomeAssignment08.py  HomeAssignment10.py
week3-assignment/python/: HomeAssignment11.py  HomeAssignment12.py  HomeAssignment13.py  HomeAssignment14.py
week4-assignment/python/: CSVHandler.py  CoroanaDataAnalysis.py  CoronaDataAnalysis.py  DataAnalyser.py  DataVisualisationAndEDA.py  Pandas_HomeAssignment.py
week5-assignment/python/: DataVisualisationAndEDA.py
week6-assignment/python/: CovidEDA.py
week7-assignment/python/: HousePricePrediction_Single_Linear_Regression.py
